--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,18 @@ body {
 
 .title {
   position: fixed;
-  text-color: teal;
   text-align: center;
   margin: 0 auto;
   width: 100%;
   border: 1px solid black;
+  background-color: #774898;
+}
+
+.title h1 {
+  color: white;
 }
 
 canvas {
-  background-color: yellow;
+  background-color: teal;
   max-width: 100%;
 }
