--- a/moveable-balls/src/index.css
+++ b/moveable-balls/src/index.css
@@ -7,7 +7,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+   height: 100vh;
+  margin: 0;
+  background-color: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+#canvas {
+  background-color: white;
+}
+
